--- a/website/angularjs/controller/auth/recomendaciones/recomendaciones.jade
+++ b/website/angularjs/controller/auth/recomendaciones/recomendaciones.jade
@@ -1,6 +1,6 @@
 p(style="font-size: 20px; font-weight: bold; text-align: center; padding-top: 2%") Recomendaciones
 div(ng-if="rct.recomienda")
-    p(style="font-size: 14px; font-weight: bold; text-align: center; padding-top: 2%") Agrega alguna lista para poder recomendarte más y descubir música nueva!
+    p(style="font-size: 14px; font-weight: bold; text-align: center; padding-top: 2%") Agrega alguna lista para poder recomendarte nueva música o vuelve dentro de un tiempo para ver si hay nuevas recomendaciones
 div(flex=90)
     md-list(style="padding-left:10%" flex)
 
