arreglando ultimas cosas

--- a/website/angularjs/controller/auth/editList/editList.jade
+++ b/website/angularjs/controller/auth/editList/editList.jade
@@ -10,5 +10,5 @@ md-list
 
         md-checkbox.md-secondary(aria-label="row" ng-model="elc.editList.info[$index].seleccionado")
         md-button(ng-click="elc.songEdit(info.idenlace, elc.editList.listaid, $index)") Editar
-    md-button(ng-click = 'elc.eliminar()') Elminiar seleccionados
+    md-button(ng-click = 'elc.eliminar()') Eliminar seleccionados
     md-button(ng-click = 'elc.addNew()') Añadir
