--- a/website/angularjs/controller/auth/frame/addListDialog.jade
+++ b/website/angularjs/controller/auth/frame/addListDialog.jade
@@ -18,11 +18,11 @@ md-dialog(flex=60)
                                     div(ng-message="required") Campo requerido
 
                             //md-chips(ng-model='mc.tags' placeholder="Añade tags" required)
-                            md-contact-chips(ng-model='mc.tagsSelected', md-contacts='mc.filter($query)', md-contact-name='nombre', md-require-match='true', md-highlight-flags='i', filter-selected='true', placeholder='Etiquetas')
+                            md-contact-chips(ng-model='mc.tagsSelected', md-contacts='mc.filter($query)', md-contact-name='nombre', md-require-match='true', md-highlight-flags='i', filter-selected='true', placeholder='Busca etiquetas')
                             div(layout='column')
                                 div(layout='row')
                                     md-input-container
-                                        label Enlaces
+                                        label Buscar enlaces
                                         input( ng-model='mc.url', type='text')
                                     //md-button(ng-click="mc.addUrl()") Añadir
                                     md-button(ng-click="mc.searchUrl(mc.url)") Buscar
@@ -50,7 +50,7 @@ md-dialog(flex=60)
 
         div(layout="column", flex=40)
 
-            md-list
+            md-list(style="overflow-y: auto")
                 md-subheader.md-no-sticky Canciones de {{mc.nombre}}
                 md-list-item.md-3-line(ng-repeat="url in mc.urls track by $index", ng-click='null')
                     img.md-avatar(ng-src='{{url.thumbnail}}')
