--- a/website/angularjs/controller/auth/mislistas/mislistas.jade
+++ b/website/angularjs/controller/auth/mislistas/mislistas.jade
@@ -2,7 +2,7 @@
 div(layout="row")
     div(flex=45)
     div(flex=35)
-        p(style="font-size: 20px; padding-left:5%; padding-top: 10%") Mi Perfil
+        p(style="font-size: 20px; padding-left:5%; padding-top:2%") Perfil
         md-button(md-ripple-size="full" ng-click="mlc.abrir()" ) Editar Mis Datos
 
 
