--- a/website/angularjs/controller/auth/mislistas/mislistas.jade
+++ b/website/angularjs/controller/auth/mislistas/mislistas.jade
@@ -1,12 +1,11 @@
 
 div(layout="row")
-    div(flex=45)
-    div(flex=35)
-        p(style="font-size: 20px; padding-left:5%; padding-top:2%") Perfil
+    span(flex)
+    div
         md-button(md-ripple-size="full" ng-click="mlc.abrir()" ) Editar Mis Datos
 
 
-    div(flex=20)
+
 
 md-tabs(md-dynamic-height md-border-bottom md-center-tabs )
     md-tab(label="Mis listas" md-active="mlc.tab1")
