--- a/website/angularjs/controller/auth/editList/addSongDialog.jade
+++ b/website/angularjs/controller/auth/editList/addSongDialog.jade
@@ -1,9 +1,9 @@
-md-dialog(flex=60)
+md-dialog(flex=30)
     md-toolbar
         .md-toolbar-tools
             span.md-headline Nueva Playlist
     div(layout="row")
-        div(layout="column", flex=60)
+        div(layout="column", flex)
             form( ng-cloak, name="miForm")
                 md-dialog-content
                     .md-dialog-content
