--- a/website/angularjs/controller/auth/home/home.jade
+++ b/website/angularjs/controller/auth/home/home.jade
@@ -55,15 +55,15 @@ div(layout="row" style="padding-top: 2%")
         section.cards
             div(layout='row', layout-align='center stretch' layout-wrap)
                 md-card(ng-repeat="lista in hct.popularesHome track by $index" flex=20 )
-                    div(ng-click="hct.verLista(lista)" style="cursor:pointer")
-                        div(layout="row")
+                    div
+                        div(layout="row" ng-click="hct.verLista(lista)" style="cursor:pointer")
                             div(layout= "column" flex=50)
                                 img.md-card-image(flex= 50, ng-src='{{lista.info[0].thumbnail}}')
                                 img.md-card-image(flex= 50, ng-src='{{lista.info[1].thumbnail}}')
                             div(layout= "column" flex=50)
                                 img.md-card-image(flex= 50, ng-src='{{lista.info[2].thumbnail}}')
                                 img.md-card-image(flex= 50, ng-src='{{lista.info[3].thumbnail}}')
-                        p(style="padding-top: 1%; font-weight: bold") {{ lista.nombre }}
+                        p(style="padding-top: 1%; font-weight: bold; cursor:pointer" ng-click="hct.verLista(lista)" ) {{ lista.nombre }}
 
                         a(href='/perfilUsuario?idUser={{lista.usuarioid}}') {{ lista.nombreUsuario }}
                         p Genero: {{ lista.tags[0] }}
@@ -96,17 +96,18 @@ div(layout="row" style="padding-top: 2%")
                 p(style="font-size: 20px; font-height: bold") Lista de la semana
             div(layout="row" layout-align="center")
                 md-content(layout-xs='column' layout='row')
-                    md-card(flex ng-click="hct.verLista(hct.masEscuchada[0])" style="cursor:pointer" )
-                        div(layout= "row")
-                            img.md-card-image(flex= 50, ng-src='{{hct.masEscuchada[0].info[0].thumbnail}}')
-                            img.md-card-image(flex= 50, ng-src='{{hct.masEscuchada[0].info[1].thumbnail}}')
-                        div(layout= "row")
-                            img.md-card-image(flex= 50, ng-src='{{hct.masEscuchada[0].info[2].thumbnail}}')
-                            img.md-card-image(flex= 50, ng-src='{{hct.masEscuchada[0].info[3].thumbnail}}')
+                    md-card(flex)
+                        div(layout="row" ng-click="hct.verLista(lista)" style="cursor:pointer")
+                            div(layout= "column")
+                                img.md-card-image(flex= 50, ng-src='{{hct.masEscuchada[0].info[0].thumbnail}}')
+                                img.md-card-image(flex= 50, ng-src='{{hct.masEscuchada[0].info[1].thumbnail}}')
+                            div(layout= "column")
+                                img.md-card-image(flex= 50, ng-src='{{hct.masEscuchada[0].info[2].thumbnail}}')
+                                img.md-card-image(flex= 50, ng-src='{{hct.masEscuchada[0].info[3].thumbnail}}')
 
                         //md-card-actions(layout='row', layout-align='start center')
                         //    md-card-icon-actions
-                        span.md-headline(flex md-truncate) {{ hct.masEscuchada[0].nombre }}
+                        span.md-headline(flex md-truncate ng-click="hct.verLista(lista)") {{ hct.masEscuchada[0].nombre }}
                         a(href='/perfilUsuario?idUser={{lista.usuarioid}}') {{ hct.masEscuchada[0].nombreUsuario }}
                         p Genero: {{ hct.masEscuchada[0].tags[0] }}
 
