--- a/website/angularjs/controller/auth/editList/addSongDialog.jade
+++ b/website/angularjs/controller/auth/editList/addSongDialog.jade
@@ -1,7 +1,7 @@
 md-dialog(flex=30)
     md-toolbar
         .md-toolbar-tools
-            span.md-headline Nueva Playlist
+            span.md-headline Editar lista
     div(layout="row")
         div(layout="column", flex)
             form( ng-cloak, name="miForm")
